=========
Changelog
=========

Here you can find the recent changes to vcspull.

CURRENT
-------

- [dev]: support for tmuxp ``before_script`` to set up local virtualenv +
  dependencies.

0.0.8.4
-------

- [cli] Update documentation when no config found to show ``yaml`` and
  ``json``. Remove mentioning of ``conf``.

0.0.8.3
-------

- [logging] `Issue #6`_ - fix issue where log templates would not
  concatenate correctly.

.. _issue #1: https://github.com/tony/vcspull/issues/6

0.0.8.2
-------

- [packaging] Fix issue where ``package_metadata.py`` missing from
  ``MANIFEST.in``.

0.0.8.1
-------

- [setup.py] remove history from readme

0.0.8
-----

- Use werkzeug/flask style unit test suites.
- [docs] Fix section headings.
- [internals] use conventions from `tony/cookiecutter-pypackage`_.

0.0.7
-----

- New logging system from pypa/pip with support showing current stderr
  (checkout, pull, cloning) progress.
- ``unicode_literals``, ``__future__`` for python 3 support.

0.0.6
-----

- Renamed to ``vcspull``.

0.0.5
-----

- [tests] tests for loading multiple configs, config conflict cases
- [internal] fix recursive imports, using explicit importing
- [git] handle cli case where git is on a different branch, just fetch
  repo.
- [py3] python 3 support

0.0.4
-----

- [svn] [git] [hg] added functionality for pip's netloc and vcs
  functionality.
- [docs] update license docs for methods from salt (apache) and pip (mit).
- [cli] autocomplete
- [config] [tests] Support for expanding environment variables in syntax
  with ``${envvar}`` and ``~``.
- [cli] Exit with ``Ctrl-C`` gracefully.

0.0.3
-----

- [docs] [examples] more docs and examples
- [internal] remove developer logger message that would show when
  updating.
- [cli] - fixed bug where logger would output message twice
- [`pep257`_] [`pep8`_] [logger] update ``vcspull.log`` module to latest
  code (from `tmuxp`_ project).

0.0.2
-----

11/23/2013
~~~~~~~~~~
